--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,30 @@ html, body{
   padding: 0px;
   background-color: #1b2c2e;
 }
+
+
+@-webkit-keyframes slide-in-right {
+  0% {
+      -webkit-transform: translateX(1000px);
+      transform: translateX(1000px);
+      opacity: 0;
+  }
+  100% {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+      opacity: 1;
+  }
+}
+
+@keyframes slide-in-right {
+  0% {
+      -webkit-transform: translateX(1000px);
+      transform: translateX(1000px);
+      opacity: 0;
+  }
+  100% {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+      opacity: 1;
+  }
+}
